--- a/src/app/components/add-edit-product/add-edit-product.component.html
+++ b/src/app/components/add-edit-product/add-edit-product.component.html
@@ -1,7 +1,8 @@
-<div class="row mt-1">
+<app-progress-bar *ngIf="loading"></app-progress-bar>
+<div *ngIf="!loading" class="row mt-1">
   <div class="col-lg-3 offset-lg-4">
     <div class="card border-secondary mb-3" style="max-width: 30rem">
-      <div class="card-header text-center">Agregar Producto</div>
+      <div class="card-header text-center">{{ operation }} Producto</div>
       <div class="card-body">
         <form [formGroup]="form" (ngSubmit)="addProduct()">
           <input
