--- a/src/app/components/list-products/list-products.component.html
+++ b/src/app/components/list-products/list-products.component.html
@@ -1,11 +1,12 @@
-<div class="container">
+<app-progress-bar *ngIf="loading"></app-progress-bar>
+<div *ngIf="!loading" class="container">
   <div class="title">
     <h4>Listado de productos</h4>
     <button type="button" class="btn btn-dark" routerLink="/add">
       Agregar Producto
     </button>
   </div>
-  <table class="table table-hover">
+  <table *ngIf="listProducts.length > 0" class="table table-hover">
     <thead>
       <tr>
         <th scope="col">Nombre</th>
@@ -19,7 +20,7 @@
       <tr *ngFor="let item of listProducts" class="table-primary">
         <td>{{ item.name }}</td>
         <td>{{ item.description }}</td>
-        <td>{{ item.price }}</td>
+        <td>{{ item.price | currency }}</td>
         <td>{{ item.stock }}</td>
         <td>
           <button
@@ -29,11 +30,16 @@
           >
             Editar
           </button>
-          <button type="button" class="btn btn-danger btn-sm ms-2">
+          <button
+            (click)="deleteProduct(item.id!)"
+            type="button"
+            class="btn btn-danger btn-sm ms-2"
+          >
             Eliminar
           </button>
         </td>
       </tr>
     </tbody>
   </table>
+  <h5 *ngIf="listProducts.length == 0">No hay productos agregados</h5>
 </div>
